# PolySolver

./: .gitignore  CMakeLists.txt
lib/: file_utils.h  polynomial.h  step_solver.h
src/: file_utils.cpp  main.cpp  polynomial.cpp  step_solver.cpp  test_polynomial.cpp
